--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@ browser=chrome
 env=https://login1.nextbasecrm.com
 username=helpdesk1--101@cybertekschool.com
 password=UserUser
+googleURL=https://google.com
+searchValue=orange
