--- a/configuration.properties
+++ b/configuration.properties
@@ -3,4 +3,6 @@ env=https://login1.nextbasecrm.com
 username=helpdesk1--101@cybertekschool.com
 password=UserUser
 googleURL=https://google.com
-searchValue=orange
+searchValue=apple
+bingURL=https://bing.com
+
