--- a/configuration.properties
+++ b/configuration.properties
@@ -1,8 +1,8 @@
 browser=chrome
 env=https://login1.nextbasecrm.com
-username=helpdesk1--101@cybertekschool.com
+username=hr1@cybertekschool.com
 password=UserUser
 googleURL=https://google.com
 searchValue=apple
 bingURL=https://bing.com
-
+registration.form.url=https://practice.cydeo.com/registration_form
